--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -25,7 +25,7 @@ on: [pull_request_target]
 
 jobs:
   label:
-
+    if: github.repository == 'apache/flink-cdc'
     runs-on: ubuntu-latest
     permissions:
       contents: read
