--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -25,13 +25,13 @@ on: [pull_request_target]
 
 jobs:
   label:
-
+    if: github.repository == 'apache/flink-cdc'
     runs-on: ubuntu-latest
     permissions:
       contents: read
       pull-requests: write
-
+      issues: write          # 必须显式声明
     steps:
-      - uses: actions/labeler@v4
+      - uses: actions/labeler@v5   # v5/v4 均可
         with:
-          repo-token: "${{ secrets.GITHUB_TOKEN }}"
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
