--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -28,7 +28,7 @@ jobs:
     if: github.repository == 'apache/flink-cdc'
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       pull-requests: write
       issues: write
     steps:
