--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -33,5 +33,5 @@ jobs:
     steps:
       - uses: actions/labeler@v5
         with:
-          repo-token: ${{ secrets.PAT_TOKEN }}
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
 
