--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -30,8 +30,8 @@ jobs:
     permissions:
       contents: read
       pull-requests: write
-      issues: write
+
     steps:
-      - uses: actions/labeler@v5
+      - uses: actions/labeler@v4
         with:
-          repo-token: ${{ secrets.PAT_TOKEN }}
+          repo-token: "${{ secrets.GITHUB_TOKEN }}"
